# api.yml
@@ -39,19 +39,19 @@ paths:
         '500':
           description: Server error
   
-  /postEntry:
+  /saveWeek:
     post:
       tags:
         - timesheet
-      summary: send a new entry
-      description: post a new entry
-      operationId: postEntry
+      summary: save week with time entries
+      description: save week with time entries
+      operationId: saveWeek
       requestBody:
         description: entry you want to send
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TimeEntry'
+              $ref: '#/components/schemas/Week'
         required: true
       responses:
         '200':
