# springboot-backend/src/main/java/com/fhdw/webproject/api/TimesheetApiDelegateImpl.java
@@ -1,15 +1,28 @@
 package com.fhdw.webproject.api;
 
+import com.fhdw.webproject.facade.ServiceFacade;
 import com.openapi.api.TimesheetApiDelegate;
-import com.openapi.model.TimeEntry;
+import com.openapi.model.Week;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+
 @Service
 public class TimesheetApiDelegateImpl implements TimesheetApiDelegate {
+
+    @Autowired
+    ServiceFacade serviceFacade;
+
     @Override
-    public ResponseEntity<Void> postEntry(TimeEntry timeEntry) {
-        return new ResponseEntity<>(HttpStatus.OK);
+    public ResponseEntity<List<Week>> getWeeksAll() {
+        return new ResponseEntity<>(serviceFacade.getWeeksAll(), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> saveWeek(Week week) {
+        return TimesheetApiDelegate.super.saveWeek(week);
     }
 }
